[gd_scene load_steps=47 format=2]

[ext_resource path="res://scenes/game/results_data.gd" type="Script" id=1]
[ext_resource path="res://scenes/game/timing_label.gd" type="Script" id=2]
[ext_resource path="res://scenes/game/entities/lanes_upper.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/game/conductor.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/game/entities/lanes_lower.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/game/framerate_counter.gd" type="Script" id=6]
[ext_resource path="res://images/gameplay-bg.jpg" type="Texture" id=7]
[ext_resource path="res://fonts/Trebuchet_MS.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://textures/gameplay/lane_effect.png" type="Texture" id=9]
[ext_resource path="res://scenes/game/combo_counter.gd" type="Script" id=10]
[ext_resource path="res://scenes/game/game.gd" type="Script" id=11]
[ext_resource path="res://textures/ui/share.png" type="Texture" id=12]
[ext_resource path="res://scenes/game/pause_button.gd" type="Script" id=13]
[ext_resource path="res://scenes/game/pause_popup.gd" type="Script" id=14]
[ext_resource path="res://scenes/game/entities/barline_upper.tscn" type="PackedScene" id=15]
[ext_resource path="res://scenes/game/notes/note_tap_side.tscn" type="PackedScene" id=16]
[ext_resource path="res://scenes/game/entities/barline.tscn" type="PackedScene" id=17]
[ext_resource path="res://scenes/game/notes/note_tap.tscn" type="PackedScene" id=18]
[ext_resource path="res://scenes/game/notes/note_hold_side.tscn" type="PackedScene" id=19]
[ext_resource path="res://scenes/game/notes/note_tap_upper.tscn" type="PackedScene" id=20]
[ext_resource path="res://scenes/game/notes/note_hold.tscn" type="PackedScene" id=21]
[ext_resource path="res://scenes/game/notes/note_hold_upper.tscn" type="PackedScene" id=22]
[ext_resource path="res://scenes/game/shader_cache.gd" type="Script" id=23]

[sub_resource type="DynamicFont" id=20]
size = 64
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=19]
size = 64
outline_size = 2
outline_color = Color( 0, 0.0431373, 0.396078, 1 )
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=21]
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=22]
size = 144
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=23]
size = 64
font_data = ExtResource( 8 )

[sub_resource type="SpatialMaterial" id=14]
render_priority = -1
flags_transparent = true
albedo_color = Color( 0.54902, 0.627451, 0.784314, 1 )
albedo_texture = ExtResource( 9 )

[sub_resource type="PlaneMesh" id=15]
size = Vector2( 1, 1 )

[sub_resource type="SpatialMaterial" id=2]
render_priority = -1
flags_transparent = true
albedo_color = Color( 0.54902, 0.627451, 0.784314, 1 )
albedo_texture = ExtResource( 9 )

[sub_resource type="PlaneMesh" id=3]
size = Vector2( 1, 1 )

[sub_resource type="SpatialMaterial" id=4]
render_priority = -1
flags_transparent = true
albedo_color = Color( 0.54902, 0.627451, 0.784314, 1 )
albedo_texture = ExtResource( 9 )

[sub_resource type="PlaneMesh" id=5]
size = Vector2( 1, 1 )

[sub_resource type="SpatialMaterial" id=6]
render_priority = -1
flags_transparent = true
albedo_color = Color( 0.54902, 0.627451, 0.784314, 1 )
albedo_texture = ExtResource( 9 )

[sub_resource type="PlaneMesh" id=7]
size = Vector2( 1, 1 )

[sub_resource type="SpatialMaterial" id=8]
render_priority = -1
flags_transparent = true
albedo_color = Color( 0.54902, 0.627451, 0.784314, 1 )
albedo_texture = ExtResource( 9 )

[sub_resource type="PlaneMesh" id=9]
size = Vector2( 1, 1 )

[sub_resource type="SpatialMaterial" id=10]
render_priority = -1
flags_transparent = true
albedo_color = Color( 0.54902, 0.627451, 0.784314, 1 )
albedo_texture = ExtResource( 9 )

[sub_resource type="PlaneMesh" id=11]
size = Vector2( 1, 1 )

[sub_resource type="SpatialMaterial" id=12]
render_priority = -1
flags_transparent = true
albedo_color = Color( 0.54902, 0.627451, 0.784314, 1 )
albedo_texture = ExtResource( 9 )

[sub_resource type="PlaneMesh" id=13]
size = Vector2( 1, 1 )

[sub_resource type="SpatialMaterial" id=16]
render_priority = -1
flags_transparent = true
albedo_color = Color( 0.54902, 0.627451, 0.784314, 1 )
albedo_texture = ExtResource( 9 )

[sub_resource type="PlaneMesh" id=17]
size = Vector2( 1, 1 )

[sub_resource type="BoxShape" id=18]
margin = 0.02
extents = Vector3( 0.5, 0.5, 0.5 )

[sub_resource type="Environment" id=1]
background_mode = 4
ambient_light_color = Color( 1, 1, 1, 1 )
glow_intensity = 0.6
glow_blend_mode = 0

[node name="Game" type="Spatial"]
script = ExtResource( 11 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PauseControl" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FramerateCounter" type="Label" parent="CanvasLayer"]
margin_left = 38.6252
margin_top = 176.481
margin_right = 168.625
margin_bottom = 252.481
custom_fonts/font = SubResource( 20 )
align = 1
valign = 1
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ComboCounter" type="Control" parent="CanvasLayer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_right = 20.0
margin_bottom = 40.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ComboCounterLabel" type="Label" parent="CanvasLayer/ComboCounter"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -68.0
margin_top = -38.0
margin_right = 68.0
margin_bottom = 38.0
grow_horizontal = 2
rect_pivot_offset = Vector2( 200, 50 )
size_flags_horizontal = 2
size_flags_vertical = 2
custom_colors/font_color = Color( 0.584314, 0.882353, 1, 1 )
custom_fonts/font = SubResource( 19 )
text = "1234"
align = 1
valign = 1
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseContainer" type="MarginContainer" parent="CanvasLayer"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -80.0
margin_bottom = 80.0
mouse_filter = 2
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseButton" type="TextureButton" parent="CanvasLayer/PauseContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 144.0
margin_bottom = 144.0
rect_min_size = Vector2( 128, 128 )
mouse_filter = 1
texture_normal = ExtResource( 12 )
expand = true
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GaugeContainer" type="MarginContainer" parent="CanvasLayer"]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/GaugeContainer"]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2

[node name="TimingIndicator" type="Control" parent="CanvasLayer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_right = 20.0
margin_bottom = 40.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimingLabel" type="Label" parent="CanvasLayer/TimingIndicator"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -17.0
margin_top = -10.0
margin_right = 17.0
margin_bottom = 10.0
grow_horizontal = 2
rect_pivot_offset = Vector2( 200, 50 )
size_flags_horizontal = 2
size_flags_vertical = 2
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 21 )
text = "LATE"
align = 1
valign = 1
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PausePopup" type="Popup" parent="CanvasLayer"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/PausePopup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -425.5
margin_top = -246.0
margin_right = 425.5
margin_bottom = -78.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 22 )
text = "GET GNOMED"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResumeButton" type="Button" parent="CanvasLayer/PausePopup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -115.0
margin_top = -41.0
margin_right = 115.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 23 )
text = "Resume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.956305, 0.292372, 0, -0.292372, 0.956305, 0, 3.3, 5.5 )
keep_aspect = 0
current = true
fov = 75.0

[node name="Lanes_lower" parent="." instance=ExtResource( 5 )]

[node name="LaneEffect0" type="MeshInstance" parent="Lanes_lower"]
transform = Transform( -5.24537e-08, 1, 0, -1.2, -4.37114e-08, 0, 0, 0, 16, -0.02, 0.625, -8 )
visible = false
material_override = SubResource( 14 )
mesh = SubResource( 15 )
material/0 = null

[node name="LaneEffect1" type="MeshInstance" parent="Lanes_lower"]
transform = Transform( 0.95, 0, 0, 0, 1, 0, 0, 0, 16, 0.5, -0.02, -8 )
visible = false
material_override = SubResource( 2 )
mesh = SubResource( 3 )
material/0 = null

[node name="LaneEffect2" type="MeshInstance" parent="Lanes_lower"]
transform = Transform( 0.95, 0, 0, 0, 1, 0, 0, 0, 16, 1.5, -0.02, -8 )
visible = false
material_override = SubResource( 4 )
mesh = SubResource( 5 )
material/0 = null

[node name="LaneEffect3" type="MeshInstance" parent="Lanes_lower"]
transform = Transform( 0.95, 0, 0, 0, 1, 0, 0, 0, 16, 2.5, -0.02, -8 )
visible = false
material_override = SubResource( 6 )
mesh = SubResource( 7 )
material/0 = null

[node name="LaneEffect4" type="MeshInstance" parent="Lanes_lower"]
transform = Transform( 0.95, 0, 0, 0, 1, 0, 0, 0, 16, 3.5, -0.02, -8 )
visible = false
material_override = SubResource( 8 )
mesh = SubResource( 9 )
material/0 = null

[node name="LaneEffect5" type="MeshInstance" parent="Lanes_lower"]
transform = Transform( 0.95, 0, 0, 0, 1, 0, 0, 0, 16, 4.5, -0.02, -8 )
visible = false
material_override = SubResource( 10 )
mesh = SubResource( 11 )
material/0 = null

[node name="LaneEffect6" type="MeshInstance" parent="Lanes_lower"]
transform = Transform( 0.95, 0, 0, 0, 1, 0, 0, 0, 16, 5.5, -0.02, -8 )
visible = false
material_override = SubResource( 12 )
mesh = SubResource( 13 )
material/0 = null

[node name="LaneEffect7" type="MeshInstance" parent="Lanes_lower"]
transform = Transform( -5.24537e-08, -1, 0, 1.2, -4.37114e-08, 0, 0, 0, 16, 6.02, 0.625, -8 )
visible = false
material_override = SubResource( 16 )
mesh = SubResource( 17 )
material/0 = null

[node name="LaneArea0" type="Area" parent="Lanes_lower"]
transform = Transform( -5.68248e-08, 0.01, 0, -1.3, -4.37114e-10, 0, 0, 0, 6, 0, 0.625, -0.5 )
collision_layer = 32

[node name="CollisionShape" type="CollisionShape" parent="Lanes_lower/LaneArea0"]
shape = SubResource( 18 )

[node name="LaneArea1" type="Area" parent="Lanes_lower"]
transform = Transform( 1, 0, 0, 0, 0.01, 0, 0, 0, 6, 0.5, 0, -0.5 )
collision_layer = 32

[node name="CollisionShape" type="CollisionShape" parent="Lanes_lower/LaneArea1"]
shape = SubResource( 18 )

[node name="LaneArea2" type="Area" parent="Lanes_lower"]
transform = Transform( 1, 0, 0, 0, 0.01, 0, 0, 0, 6, 1.5, 0, -0.5 )
collision_layer = 32

[node name="CollisionShape" type="CollisionShape" parent="Lanes_lower/LaneArea2"]
shape = SubResource( 18 )

[node name="LaneArea3" type="Area" parent="Lanes_lower"]
transform = Transform( 1, 0, 0, 0, 0.01, 0, 0, 0, 6, 2.5, 0, -0.5 )
collision_layer = 32

[node name="CollisionShape" type="CollisionShape" parent="Lanes_lower/LaneArea3"]
shape = SubResource( 18 )

[node name="LaneArea4" type="Area" parent="Lanes_lower"]
transform = Transform( 1, 0, 0, 0, 0.01, 0, 0, 0, 6, 3.5, 0, -0.5 )
collision_layer = 32

[node name="CollisionShape" type="CollisionShape" parent="Lanes_lower/LaneArea4"]
shape = SubResource( 18 )

[node name="LaneArea5" type="Area" parent="Lanes_lower"]
transform = Transform( 1, 0, 0, 0, 0.01, 0, 0, 0, 6, 4.5, 0, -0.5 )
collision_layer = 32

[node name="CollisionShape" type="CollisionShape" parent="Lanes_lower/LaneArea5"]
shape = SubResource( 18 )

[node name="LaneArea6" type="Area" parent="Lanes_lower"]
transform = Transform( 1, 0, 0, 0, 0.01, 0, 0, 0, 6, 5.5, 0, -0.5 )
collision_layer = 32

[node name="CollisionShape" type="CollisionShape" parent="Lanes_lower/LaneArea6"]
shape = SubResource( 18 )

[node name="LaneArea7" type="Area" parent="Lanes_lower"]
transform = Transform( -5.68248e-08, -0.01, 0, 1.3, -4.37114e-10, 0, 0, 0, 6, 6, 0.625, -0.5 )
collision_layer = 32

[node name="CollisionShape" type="CollisionShape" parent="Lanes_lower/LaneArea7"]
shape = SubResource( 18 )

[node name="Lanes_upper" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.5, 2, -0.25 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gameplay_bg" type="TextureRect" parent="Control"]
self_modulate = Color( 0.247059, 0.247059, 0.247059, 1 )
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 7 )
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Conductor" parent="." instance=ExtResource( 4 )]

[node name="result_data" type="Node" parent="."]
script = ExtResource( 1 )

[node name="ShaderCache" type="Spatial" parent="."]
transform = Transform( 0.02, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -24 )
script = ExtResource( 23 )

[node name="Barline" parent="ShaderCache" instance=ExtResource( 17 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 0, 0 )

[node name="Barline_Upper" parent="ShaderCache" instance=ExtResource( 15 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.5, 2, 0 )

[node name="Note_Hold" parent="ShaderCache" instance=ExtResource( 21 )]

[node name="Note_Hold_Side" parent="ShaderCache" instance=ExtResource( 19 )]

[node name="Note_Hold_Upper" parent="ShaderCache" instance=ExtResource( 22 )]

[node name="Note_Tap" parent="ShaderCache" instance=ExtResource( 18 )]

[node name="Note_Side" parent="ShaderCache" instance=ExtResource( 16 )]

[node name="Note_Tap_Upper" parent="ShaderCache" instance=ExtResource( 20 )]

[connection signal="note_judged" from="." to="CanvasLayer/ComboCounter/ComboCounterLabel" method="_on_Game_note_judged"]
[connection signal="note_judged" from="." to="CanvasLayer/TimingIndicator/TimingLabel" method="_on_Game_note_judged"]
[connection signal="note_judged" from="." to="result_data" method="_on_Game_note_judged"]
[connection signal="pause" from="." to="Conductor" method="_on_Game_pause"]
[connection signal="pressed" from="CanvasLayer/PauseContainer/PauseButton" to="CanvasLayer/PauseContainer/PauseButton" method="_on_PauseButton_pressed"]
[connection signal="unpause" from="CanvasLayer/PausePopup" to="Conductor" method="_on_PausePopup_unpause"]
[connection signal="pressed" from="CanvasLayer/PausePopup/ResumeButton" to="CanvasLayer/PausePopup" method="_on_ResumeButton_pressed"]
[connection signal="finished" from="Conductor" to="." method="_on_Conductor_finished"]
[connection signal="finished" from="Conductor" to="CanvasLayer/ComboCounter/ComboCounterLabel" method="_on_Conductor_finished"]
